--- a/payment-gateway/app.env
+++ b/payment-gateway/app.env
@@ -1,5 +1,5 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://root:12345@localhost:5432/bank_simulator?sslmode=disable
+DB_SOURCE=postgresql://root:Control123@localhost:5432/payment_service?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8081
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=20m
