--- a/bank-simulator-backend/Makefile
+++ b/bank-simulator-backend/Makefile
@@ -1,25 +1,26 @@
 postgres:
-	docker pull postgres:latest
-	docker rm -f postgres15
-	docker run --name postgres15 --network bank-network -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=password -d postgres:latest
+	docker compose up -d
+	# docker pull postgres:latest
+	# docker rm -f postgres16
+	# docker run --name postgres16 --network bank-network -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=Control123 -d postgres:latest
 
 createdb:
-	docker exec -it postgres15 createdb --username=root --owner=root bank_simulator
+	docker exec -it postgres-db createdb --username=root --owner=root bank_simulator
 
 dropdb:
-	docker exec -it postgres15 dropdb bank_simulator
+	docker exec -it postgres16 dropdb bank_simulator
 
 migrateup:
 	migrate -path db/migration -database "postgresql://root:Control123@localhost:5432/bank_simulator?sslmode=disable" -verbose up
 
 migrateup1:
-	migrate -path db/migration -database "postgresql://root:password@localhost:5432/bank_simulator?sslmode=disable" -verbose up 1
+	migrate -path db/migration -database "postgresql://root:Control123@localhost:5432/bank_simulator?sslmode=disable" -verbose up 1
 
 migratedown:
-	migrate -path db/migration -database "postgresql://root:password@localhost:5432/bank_simulator?sslmode=disable" -verbose down
+	migrate -path db/migration -database "postgresql://root:Control123@localhost:5432/bank_simulator?sslmode=disable" -verbose down
 
 migratedown1:
-	migrate -path db/migration -database "postgresql://root:password@localhost:5432/bank_simulator?sslmode=disable" -verbose down 1
+	migrate -path db/migration -database "postgresql://root:Control123@localhost:5432/bank_simulator?sslmode=disable" -verbose down 1
 
 sqlc:
 	sqlc generate
