--- a/payment-gateway/app.env
+++ b/payment-gateway/app.env
@@ -1,6 +1,13 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:Control123@localhost:5432/payment_service?sslmode=disable
-SERVER_ADDRESS=8081
+SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
 ACCESS_TOKEN_DURATION=20m
 BANK_URL=https//localhost:8080/
+
+# Establecer variables de conexión a la base de datos
+DB_HOST="localhost" # Reemplazar con el host de la base de datos
+DB_PORT="5432" # Reemplazar con el puerto de la base de datos
+DB_USER="root" # Reemplazar con el usuario de la base de datos
+DB_NAME="payment_service" # Reemplazar con el nombre de la base de datos
+DB_PASSWORD="Control123" # Reemplazar con la contraseña de la base de datos
