--- a/bank-simulator-backend/docker-compose.yml
+++ b/bank-simulator-backend/docker-compose.yml
@@ -1,40 +1,25 @@
-version: '3.9'
 
 services:
   postgres:
-    container_name: postgres-db
-    image: postgres:16-alpine
-    ports:
-      - 5432:5432
-    volumes:
-      - ~/apps/postgres:/var/lib/postgresql/data
+    image: postgres:latest
     environment:
+      - POSTGRES_DB=bank_simulator
       - POSTGRES_PASSWORD=Control123
       - POSTGRES_USER=root
-      - POSTGRES_DB=test_db
-      - POSTGRES_MULTIPLE_DATABASES=bank_simulator
-
-# services:
-#   postgres:
-#     image: postgres:latest
-#     environment:
-#       - POSTGRES_DB=bank_simulator
-#       - POSTGRES_PASSWORD=Control123
-#       - POSTGRES_USER=root
-#   api:
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
-#     ports:
-#        - "8080:8080"
-#     environment:
-#       - DB_SOURCE=postgresql://root:Control123@postgres:5432/bank_simulator?sslmode=disable
-#     depends_on:
-#       - postgres
-#     entrypoint: [
-#       "/app/wait-for.sh",
-#       "postgres:5432",
-#       "--",
-#       "/app/start.sh"
-#     ]
-#     command: [ "/app/main" ]
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+       - "8080:8080"
+    environment:
+      - DB_SOURCE=postgresql://root:Control123@postgres:5432/bank_simulator?sslmode=disable
+    depends_on:
+      - postgres
+    entrypoint: [
+      "/app/wait-for.sh",
+      "postgres:5432",
+      "--",
+      "/app/start.sh"
+    ]
+    command: [ "/app/main" ]
